# tlslite

./: CMakeLists.txt  README.md  hostmain.c  tlsmain.c
src/: CMakeLists.txt
src/encryption/: CMakeLists.txt
src/encryption/include/encryption/: random.h  rsa.h  sha.h
src/encryption/src/: random.c  rsa.c  sha.c
src/sockets/: CMakeLists.txt
src/sockets/include/sockets/: callbacks.h  sockets.h
src/sockets/src/: callbacks.c  sockets.c
src/tls/: CMakeLists.txt
src/tls/include/tls/: connection.h  extensions.h  handshakes.h  names.h  private.h  tls.h
src/tls/src/: connection.c  extensions.c  handshakes.c  names.c  tls.c
src/tls/src/handshaking/: certificate.c  client_hello.c  init.c  server_hello.c  server_hello_done.c
